# mlproject

./: README.md  app.py  application.py  pyproject.toml  requirements.txt
.ebextensions/: 02_cleanup.config  03_storage.config
notebook/: eda.ipynb  modelTraining.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
templates/: home.html  index.html
