[build-system]
# This tells Python to use setuptools to build your project and ensures it's installed
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlproject"
version = "0.0.1"
description = "My machine learning project for Monobank demo"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "seaborn",
    "matplotlib",
    "xgboost",
    "Flask",
    "dill",
]

[tool.setuptools.packages.find]
where = ["."]